#
### project ##########################################################################
#

[project]
name = "evohome-async"
dynamic = ["version"]
description = "An async client for connecting to Honeywell's TCC RESTful API."
readme = "README.md"
authors = [{ name = "David Bonnes", email = "zxdavb@bonnes.me" }]
maintainers = [{ name = "David Bonnes", email = "zxdavb@bonnes.me" }]
dependencies = ["aiohttp>=3.13.3", "aiozoneinfo>=0.2.3", "voluptuous>=0.15.2"]  # must support HA
requires-python = ">=3.13.2"
license = "Apache-2.0"

keywords = [
  "evohome",
  "honeywell",
  "resideo",
  "round thermostat",
  "tcc",
  "vision pro",
]
classifiers = [
  "Topic :: Home Automation",
  "License :: OSI Approved :: Apache Software License",
]

#
[project.scripts]
evo-client = "evohome_cli.client:main"

#
[project.urls]
"Homepage" = "https://github.com/zxdavb/evohome-async"
"Bug Tracker" = "https://github.com/zxdavb/evohome-async/issues"
"Wiki" = "https://github.com/zxdavb/evohome-async/wiki"


#
### build-system #####################################################################

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["cli", "src"]

[tool.hatch.build.targets.wheel]
packages = ["cli/evohome_cli", "src/evohomeasync", "src/evohomeasync2", "src/_evohome"]

[tool.hatch.version]
path = "src/_evohome/__init__.py"


#
### pytest ###########################################################################

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

norecursedirs = ["tests.out/*", "tests.wip/*"]


#
###  mypy ############################################################################

[tool.mypy]
python_version = "3.13"

strict = true

exclude = ["docs", "tests/tests_cc"]
files = ["cli", "src", "tests"]

# beyond strict
disallow_any_unimported = true
warn_unreachable = true


#
[[tool.mypy.overrides]]
module = ["tests.tests_rf.faked_server.vendor"]

disable_error_code = ["type-arg"] # 14

#
## ruff ##############################################################################

[tool.ruff]
exclude = ["docs/*.py", "tests/tests_cc"]
src = ["cli", "src", "tests"]
target-version = "py313"
required-version = ">=0.14.13"

[tool.ruff.lint]
select = [
  "A",   # flake8-builtins
  "ANN", # flake8-annotations
  # "ARG", # flake8-unused-args
  "ASYNC", # flake8-async
  "B",     # flake8-bugbear (opinionated anti-patterns)
  "BLE",   # flake8-blind-except
  "C4",    # flake8-comprehensions
  "C90",   # mccabe complexity
  "DTZ",   # flake8-datetimez
  # "D",   # pydocstyle
  "E",    # pycodestyle
  "EXE",  # flake8-executable (shebang)
  "F",    # Pyflakes
  "FA",   # flake8-future-annotations
  "FBT",  # flake8-boolean-trap
  "FLY",  # flynt (f-string conversion)
  "FURB", # refurb (misc anti-patterns)
  "G",    # flake8-logging-format
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "INP",  # flake8-no-pep420
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "N",    # pep8-naming
  "PERF", # perflint (performance anti-patterns)
  "PGH",  # pygrep hooks
  "PIE",  # flake8-pie (misc lint)
  "PL",   # pylint
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "PYI",  # flake8-pyi (type stub best practices)
  "Q",    # flake8-quotes
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # ruff (misc lint/anti-patterns)
  "S",    # flake8-bandit (security)
  "SIM",  # flake8-simplify
  "SLF",  # flake8-self (aka private-member-access)
  "SLOT", # flake8-slots
  "TC",   # flake8-type-checking
  "TID",  # flake8-tidy-imports
  "TRY",  # tryceratops (try/except anti-patterns)
  "T10",  # flake8-debugger
  "T20",  # flake8-print
  "UP",   # pyupgrade
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]

ignore = [
  "ANN401",  # Don't use type Any
  "E501",    # Line too long
  "G004",    # Logging statement uses f-string
  "N806",    # Variable in function should be lowercase
  "PLR0913", # Too many arguments in function definition
  "PLR2044", # Line with empty comment
  "S101",    # Assertions are removed when Python is run with optimization
  "TRY003",  # Long exception messages
]


[tool.ruff.lint.per-file-ignores]
"./cli/evohome_cli/client.py" = ["EXE001", "T10", "T201"]  # debugger, prints
"./tests/*" = ["SLF001"]  # tests need to access private members


[tool.ruff.lint.flake8-import-conventions.extend-aliases]
voluptuous = "vol"


[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = false
split-on-trailing-comma = false
#
## coverage ##########################################################################

[tool.coverage.run]
omit = ["cli/evohome_cli/*", "tests*/*"]

[tool.coverage.report]
show_missing = true
